--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "Maths"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
+xprs = "0.1.0"
+lazy_static = "1.5.0"
